# PWEQuickplayPatch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
.github/: secrets.tar.gz.gpg
.github/workflows/: cmake.yml
Source/: QuickplayModule.cpp  QuickplaySymbols.lst
symbols/: prime1.lst
